--- a/css/styles.css
+++ b/css/styles.css
@@ -3,24 +3,24 @@ body {
 	background: #F7ED80;
 }
 
-.name	{
-	margin: 1em auto;
-	width: 30em;
-	height: 5em;
+	.gameName	{
+		margin: 1em auto;
+		width: 30em;
+		height: 5em;
 
-	border: solid .5em sandybrown;
-	border-radius: 5px;
-	background-color: slategrey;
-	vertical-align: middle;
-}
+		border: solid .5em sandybrown;
+		border-radius: 5px;
+		background-color: slategrey;
+		vertical-align: middle;
+	}
 
-h1   {
-	padding: .5em auto;
-	font-family: Cherry Cream Soda;
-	font-size: 2.25em;
-	text-align: center;
-	color: pink;
-}
+	h1   {
+		padding: .5em auto;
+		font-family: Cherry Cream Soda;
+		font-size: 2.25em;
+		text-align: center;
+		color: pink;
+	}
  .rind	{
 	border-radius: 15px;
 	margin: 1em auto;
@@ -39,11 +39,11 @@ h1   {
 		background: #FF7877;
 	}
 
-	.xMark	{
+	.x	{
 		background: url("../images/xIcon.png");
 	}
 
-	.oMark	{
+	.o	{
 		background: url("../images/oIcon.png");
 	}
 
